Properly obtain JEI ingredients
We unfortunately have to reflect into JEI internals, which is not a good
thing. Regardless, we hope this will be exposed as API in 1.18, 1.17
isn't really something we worry about

Signed-off-by: TheSilkMiner <thesilkminer@outlook.com>